# Sudoku-SFML

./: .gitignore  CMakeLists.txt  FinalGame.sln  LICENSE  README.md
Debug/: FinalGame.ilk
FinalGame/: FinalGame.vcxproj  FinalGame.vcxproj.filters  main.cpp  solver.h
FinalGame/Debug/: vc141.idb  vc142.idb
FinalGame/Debug/FinalGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FinalGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: filler.h
src/: main.cpp
